# sdl-quickstart

./: CMakeLists.txt  README  bundle.py  generate-vs.bat  sdl-quickstart.py
include/%namespace%/: %namespace%.hpp  game.hpp
src/: game.cpp  main.cpp
